--- a/index.html
+++ b/index.html
@@ -307,7 +307,7 @@
   <header>
     <div class="logo">TruckersOP</div>
     <nav>
-      <a href="https://cdn.discordapp.com/attachments/1289965724714143785/1341112665405395016/GhostyV2.3.zip?ex=67b4d000&is=67b37e80&hm=97b3e1c3104c3cd68bb1e6e9c6fc2730eda00d6c45d4c15fa3764c149fe89a0b&">Download</a>
+      <a href="https://www.dropbox.com/scl/fi/epiia5rkj8pliljulaufn/GhostyV2.3.zip?rlkey=k5h7mmgyhd2kmoe53syla4qwk&st=xexbdnax&dl=1">Download</a>
       <a href="https://discord.gg/DtTYqFC98H">Discord</a>
     </nav>
   </header>
@@ -317,7 +317,7 @@
       <div class="description">
         <h1>Ghosty</h1>
         <p>Fully internal cheat using Microsoft Direct X 11 for Euro Trucks Simulator 2</p>
-        <a href="https://cdn.discordapp.com/attachments/1289965724714143785/1341112665405395016/GhostyV2.3.zip?ex=67b4d000&is=67b37e80&hm=97b3e1c3104c3cd68bb1e6e9c6fc2730eda00d6c45d4c15fa3764c149fe89a0b&" class="btn">Download Now</a>
+        <a href="https://www.dropbox.com/scl/fi/epiia5rkj8pliljulaufn/GhostyV2.3.zip?rlkey=k5h7mmgyhd2kmoe53syla4qwk&st=xexbdnax&dl=1" class="btn">Download Now</a>
       </div>
       <div class="ui-preview-container" onmousemove="updateTilt(event)" onmouseleave="resetTilt()">
         <img src="https://i.ibb.co/wF1sSMLN/image-2025-02-17-213851308.png" alt="UI Preview" class="ui-preview">
