--- a/index.html
+++ b/index.html
@@ -307,7 +307,7 @@
   <header>
     <div class="logo">TruckersOP</div>
     <nav>
-      <a href="https://spyderrock.com/s5AJ5400-GhostyV2.zip">Download</a>
+      <a href="https://spyderrock.com/uo6g9019-GhostyV2.zip">Download</a>
       <a href="https://discord.gg/DtTYqFC98H">Discord</a>
     </nav>
   </header>
@@ -317,7 +317,7 @@
       <div class="description">
         <h1>Ghosty</h1>
         <p>Fully internal cheat using Microsoft Direct X 11 for Euro Trucks Simulator 2</p>
-        <a href="https://spyderrock.com/s5AJ5400-GhostyV2.zip" class="btn">Download Now</a>
+        <a href="https://spyderrock.com/uo6g9019-GhostyV2.zip" class="btn">Download Now</a>
       </div>
       <div class="ui-preview-container" onmousemove="updateTilt(event)" onmouseleave="resetTilt()">
         <img src="https://i.ibb.co/wF1sSMLN/image-2025-02-17-213851308.png" alt="UI Preview" class="ui-preview">
