--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <meta name="description" content="Ghosty - Download tools, discover features, and get support for ETS2 / TruckersMP." />
-  <title>Ghosty | Neon Control Interface</title>
+  <meta name="description" content="Ghosty - The Ultimate External Cheat Tool for Euro Truck Simulator 2 and TruckersMP" />
+  <title>Ghosty | External Cheat Companion</title>
 
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -491,7 +491,7 @@
         <span class="brand-mark"><i class="fa-solid fa-ghost"></i></span>
         <span class="brand-text">
           <strong>Ghosty</strong>
-          <span>External Toolkit Hub</span>
+          <span>External Cheat Companion</span>
         </span>
       </a>
 
@@ -509,19 +509,18 @@
     <section class="hero">
       <div class="container hero-grid">
         <article class="panel hero-main">
-          <div class="mini-tag"><i class="fa-solid fa-wave-square"></i> Neon Interface v2</div>
-          <h1>Ghosty, remixed for the web.</h1>
+          <div class="mini-tag"><i class="fa-solid fa-wave-square"></i> Ghosty External</div>
+          <h1>Ghosty External Cheat Companion</h1>
           <p>
-            Same purpose, new skin. Download Ghosty Lite, check key info, and get support fast — all in a futuristic
-            ImGui-inspired theme that feels like Ghosty, but still behaves like a proper website.
+            Download Ghosty Lite, check key features, and get support quickly. The design changed, but the purpose is still the same: download, feature info, support, and Elite access.
           </p>
 
           <div class="hero-actions">
             <a class="btn primary" href="https://st7.ranoz.gg/DTygp4yK-Ghosty%20Bootstrapper.exe" target="_blank" rel="noopener noreferrer">
-              <i class="fa-solid fa-download"></i> Download Ghosty Lite
+              <i class="fa-solid fa-download"></i> Download Lite
             </a>
             <button class="btn danger" id="eliteOpen2" type="button">
-              <i class="fa-solid fa-crown"></i> Open Elite Access
+              <i class="fa-solid fa-crown"></i> Ghosty Elite
             </button>
             <a class="btn" href="https://discord.gg/j6p4yvsfN3" target="_blank" rel="noopener noreferrer">
               <i class="fa-brands fa-discord"></i> Join Discord
@@ -530,11 +529,11 @@
         </article>
 
         <aside class="panel hero-side">
-          <div class="scanline"><i class="fa-solid fa-circle-info"></i> Run Ghosty first, then login through bootstrapper credentials from Discord, and launch external mode.</div>
+          <div class="scanline"><i class="fa-solid fa-circle-info"></i> Start Ghosty first. Get bootstrapper credentials from Discord, then launch external mode.</div>
           <div class="stat-grid">
-            <div class="stat"><b>99%</b><span>Functions tracked as safe</span></div>
-            <div class="stat"><b>Fast</b><span>Update + fix rollout pace</span></div>
-            <div class="stat"><b>24/7</b><span>Discord support channel</span></div>
+            <div class="stat"><b>99%</b><span>Features marked undetected</span></div>
+            <div class="stat"><b>Fast</b><span>Quick updates and fixes</span></div>
+            <div class="stat"><b>24/7</b><span>Discord support</span></div>
           </div>
         </aside>
       </div>
@@ -543,53 +542,53 @@
     <section class="block">
       <div class="container">
         <div class="section-head">
-          <h2>Main Feature Focus</h2>
-          <p>Clear labels, safer defaults, and support where you need it.</p>
+          <h2>Key Features</h2>
+          <p>Main Ghosty functions and quick links.</p>
         </div>
 
         <div class="cards">
           <article class="card">
-            <h3><i class="fa-solid fa-shield-halved"></i> Safe-first utility</h3>
-            <p>Most everyday features are designed with low-risk behavior and practical use in mind for regular sessions.</p>
+            <h3><i class="fa-solid fa-shield-halved"></i> Undetected by default</h3>
+            <p>Most Ghosty features are designed to stay undetected in daily use.</p>
             <span class="flag safe">Undetected First</span>
           </article>
 
           <article class="card">
-            <h3><i class="fa-solid fa-triangle-exclamation"></i> Risk labeling</h3>
-            <p>Any option that could raise risk is clearly marked before use so users can make informed choices.</p>
+            <h3><i class="fa-solid fa-triangle-exclamation"></i> Detection warnings</h3>
+            <p>Features that can be risky are clearly marked with a detection warning.</p>
             <span class="flag warn">Detection Warning</span>
           </article>
 
           <article class="card">
-            <h3><i class="fa-solid fa-rotate-left"></i> Spoofer fallback</h3>
-            <p>Need recovery after issues? Use the dedicated Spoofer page for account/device identity flow.</p>
-            <a class="btn" href="spoofer.html" style="margin-top:10px;">Open Spoofer</a>
+            <h3><i class="fa-solid fa-rotate-left"></i> Ghosty Spoofer</h3>
+            <p>Banned from TruckersMP? Use Ghosty Spoofer for recovery flow.</p>
+            <a class="btn" href="spoofer.html" style="margin-top:10px;">Learn about Spoofer</a>
           </article>
         </div>
 
         <div class="dual">
           <article class="panel qa" style="padding:14px;">
-            <h3 style="margin-top:0;font-family:Orbitron,sans-serif;text-transform:uppercase;letter-spacing:.04em;">FAQ</h3>
+            <h3 style="margin-top:0;font-family:Orbitron,sans-serif;text-transform:uppercase;letter-spacing:.04em;">Frequently Asked Questions</h3>
             <details>
               <summary>Is Ghosty Lite free?</summary>
               <p>Yes. Ghosty Lite is free. Elite is the premium paid branch available via Discord.</p>
             </details>
             <details>
               <summary>Where do I get help?</summary>
-              <p>Use the Support button in the top nav or the Join Discord button for updates and fixes.</p>
+              <p>Use the Support button in the top navigation or Join Discord for updates and help.</p>
             </details>
             <details>
               <summary>Can I preview Elite first?</summary>
-              <p>Yes. Use the Elite button to open the access panel and continue through Discord.</p>
+              <p>Yes. Click Ghosty Elite to open the panel, then continue on Discord.</p>
             </details>
           </article>
 
           <article class="promo">
             <h3>Ghosty Elite</h3>
-            <p>Premium extras, frequent additions, and priority pipeline features.</p>
+            <p>Paid version with extra features and frequent adds.</p>
             <div class="hero-actions">
-              <button class="btn danger" id="eliteOpen3" type="button"><i class="fa-solid fa-bolt"></i> Elite Access Panel</button>
-              <a class="btn" href="features.html"><i class="fa-solid fa-layer-group"></i> View Features</a>
+              <button class="btn danger" id="eliteOpen3" type="button"><i class="fa-solid fa-bolt"></i> Open Elite</button>
+              <a class="btn" href="features.html"><i class="fa-solid fa-layer-group"></i> View all features</a>
             </div>
           </article>
         </div>
@@ -599,7 +598,7 @@
 
   <footer>
     <div class="container foot">
-      <span>Made by ©Dizcat and ©MysticN7 • Programs developed by Dizcat.</span>
+      <span>Made with ❤️ by ©Dizcat and ©MysticN7 • Programs developed by Dizcat.</span>
       <span>
         <a href="https://ko-fi.com/dizcatoff" target="_blank" rel="noopener noreferrer">Buy a Coffee</a>
         ·
@@ -615,8 +614,7 @@
         <button class="x" id="eliteClose" aria-label="Close">✕</button>
       </div>
       <p>
-        Elite includes premium modules and frequent additions. Join Discord to request access,
-        pricing, and activation instructions.
+        Elite is the paid version. Join Discord to get access and setup info.
       </p>
       <div class="hero-actions" style="margin-top:0;">
         <a class="btn danger" href="https://discord.gg/j6p4yvsfN3" target="_blank" rel="noopener noreferrer">
