--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <meta name="description" content="Ghosty - The Ultimate External Cheat Tool for Euro Truck Simulator 2 and TruckersMP" />
-  <title>Ghosty | External Cheat Companion</title>
+  <meta name="description" content="Ghosty - The Ultimate External Tool for Euro Truck Simulator 2 and TruckersMP" />
+  <title>Ghosty | Official</title>
 
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -491,7 +491,7 @@
         <span class="brand-mark"><i class="fa-solid fa-ghost"></i></span>
         <span class="brand-text">
           <strong>Ghosty</strong>
-          <span>External Cheat Companion</span>
+          <span>External Cheat</span>
         </span>
       </a>
 
@@ -510,9 +510,10 @@
       <div class="container hero-grid">
         <article class="panel hero-main">
           <div class="mini-tag"><i class="fa-solid fa-wave-square"></i> Ghosty External</div>
-          <h1>Ghosty External Cheat Companion</h1>
+          <h1>The best external tool for TruckersMP and Euro Truck Simulator 2</h1>
           <p>
-            Download Ghosty Lite, check key features, and get support quickly. The design changed, but the purpose is still the same: download, feature info, support, and Elite access.
+            Ghosty is the ultimate tool for Euro Truck Simulator 2 — made for TruckersMP and solo.
+              Minimal stress, maximum control. Keep it purple. Keep it ghost.
           </p>
 
           <div class="hero-actions">
@@ -529,11 +530,11 @@
         </article>
 
         <aside class="panel hero-side">
-          <div class="scanline"><i class="fa-solid fa-circle-info"></i> Start Ghosty first. Get bootstrapper credentials from Discord, then launch external mode.</div>
+          <div class="scanline"><i class="fa-solid fa-circle-info"></i> Ghosty may appear as a false positive. Get lite bootstrapper credentials from Discord, then external.</div>
           <div class="stat-grid">
-            <div class="stat"><b>99%</b><span>Features marked undetected</span></div>
-            <div class="stat"><b>Fast</b><span>Quick updates and fixes</span></div>
-            <div class="stat"><b>24/7</b><span>Discord support</span></div>
+            <div class="stat"><b>99%</b><span>Undetected and usefull features, and detected features are highlighted</span></div>
+            <div class="stat"><b>Living</b><span>Frequent updates and fixes</span></div>
+            <div class="stat"><b>Community</b><span>Discord support and 1,5k+ member community.</span></div>
           </div>
         </aside>
       </div>
@@ -548,15 +549,15 @@
 
         <div class="cards">
           <article class="card">
-            <h3><i class="fa-solid fa-shield-halved"></i> Undetected by default</h3>
-            <p>Most Ghosty features are designed to stay undetected in daily use.</p>
-            <span class="flag safe">Undetected First</span>
+            <h3><i class="fa-solid fa-shield-halved"></i> Teleport Enabler</h3>
+            <p>Enable teleport for any player in truckersmp to teleport with freecam.</p>
+            <span class="flag safe">Undetected</span>
           </article>
 
           <article class="card">
-            <h3><i class="fa-solid fa-triangle-exclamation"></i> Detection warnings</h3>
-            <p>Features that can be risky are clearly marked with a detection warning.</p>
-            <span class="flag warn">Detection Warning</span>
+            <h3><i class="fa-solid fa-triangle-exclamation"></i> Admin Detector</h3>
+            <p>Detect admin around you, prevent bans.</p>
+            <span class="flag safe">Undetected</span>
           </article>
 
           <article class="card">
@@ -571,7 +572,7 @@
             <h3 style="margin-top:0;font-family:Orbitron,sans-serif;text-transform:uppercase;letter-spacing:.04em;">Frequently Asked Questions</h3>
             <details>
               <summary>Is Ghosty Lite free?</summary>
-              <p>Yes. Ghosty Lite is free. Elite is the premium paid branch available via Discord.</p>
+              <p>Yes. Ghosty Lite is free. Elite is the premium paid version with insane features !</p>
             </details>
             <details>
               <summary>Where do I get help?</summary>
@@ -579,13 +580,13 @@
             </details>
             <details>
               <summary>Can I preview Elite first?</summary>
-              <p>Yes. Click Ghosty Elite to open the panel, then continue on Discord.</p>
+              <p>Yes. Click Ghosty Elite to open the panel, then continue on Discord to see showcases and more.</p>
             </details>
           </article>
 
           <article class="promo">
             <h3>Ghosty Elite</h3>
-            <p>Paid version with extra features and frequent adds.</p>
+            <p>Paid version with insane features such as fly hack and frequent adds.</p>
             <div class="hero-actions">
               <button class="btn danger" id="eliteOpen3" type="button"><i class="fa-solid fa-bolt"></i> Open Elite</button>
               <a class="btn" href="features.html"><i class="fa-solid fa-layer-group"></i> View all features</a>
@@ -598,9 +599,9 @@
 
   <footer>
     <div class="container foot">
-      <span>Made with ❤️ by ©Dizcat and ©MysticN7 • Programs developed by Dizcat.</span>
+      <span>©Dizcat • Programs developed by Dizcat.</span>
       <span>
-        <a href="https://ko-fi.com/dizcatoff" target="_blank" rel="noopener noreferrer">Buy a Coffee</a>
+        <a href="https://ko-fi.com/dizcatoff" target="_blank" rel="noopener noreferrer">Buy me a Coffee ❤️</a>
         ·
         <a href="https://github.com/DizCatOff" target="_blank" rel="noopener noreferrer">GitHub</a>
       </span>
@@ -610,15 +611,15 @@
   <div class="modal" id="eliteModal" aria-hidden="true">
     <div class="modal-box" role="dialog" aria-modal="true" aria-labelledby="eliteTitle">
       <div class="modal-top">
-        <h3 id="eliteTitle">Ghosty Elite Access</h3>
+        <h3 id="eliteTitle">Download Elite</h3>
         <button class="x" id="eliteClose" aria-label="Close">✕</button>
       </div>
       <p>
-        Elite is the paid version. Join Discord to get access and setup info.
+        Elite is a paid premium version. Join Discord to get access and setup info.
       </p>
       <div class="hero-actions" style="margin-top:0;">
         <a class="btn danger" href="https://discord.gg/j6p4yvsfN3" target="_blank" rel="noopener noreferrer">
-          <i class="fa-brands fa-discord"></i> Get Elite on Discord
+          <i class="fa-brands fa-discord"></i> Get Elite via our Discord
         </a>
         <button class="btn" type="button" id="eliteClose2">Close</button>
       </div>
