--- a/index.html
+++ b/index.html
@@ -510,9 +510,9 @@
       <div class="container hero-grid">
         <article class="panel hero-main">
           <div class="mini-tag"><i class="fa-solid fa-wave-square"></i> Ghosty External</div>
-          <h1>The best external tool for TruckersMP and Euro Truck Simulator 2</h1>
+          <h1>Ghosty, The #1 Cheat & Tool</h1>
           <p>
-            Ghosty is the ultimate tool for Euro Truck Simulator 2 — made for TruckersMP and solo.
+           Fast, powerful, and packed with exclusive features. — made for TruckersMP and solo.
               Minimal stress, maximum control. Keep it purple. Keep it ghost.
           </p>
 
