--- a/index.html
+++ b/index.html
@@ -533,7 +533,7 @@
           <div class="scanline"><i class="fa-solid fa-circle-info"></i> Ghosty may appear as a false positive. Get lite bootstrapper credentials from Discord, then external.</div>
           <div class="stat-grid">
             <div class="stat"><b>99%</b><span>Undetected and usefull features, and detected features are highlighted</span></div>
-            <div class="stat"><b>Living</b><span>Frequent updates and fixes</span></div>
+            <div class="stat"><b>Living Project</b><span>Frequent updates and fixes</span></div>
             <div class="stat"><b>Community</b><span>Discord support and 1,5k+ member community.</span></div>
           </div>
         </aside>
