Update mini-tag text in index.html

--- a/index.html
+++ b/index.html
@@ -509,7 +509,7 @@
     <section class="hero">
       <div class="container hero-grid">
         <article class="panel hero-main">
-          <div class="mini-tag"><i class="fa-solid fa-wave-square"></i> Ghosty External</div>
+          <div class="mini-tag"><i class="fa-solid fa-wave-square"></i> Official website</div>
           <h1>Ghosty, The #1 Cheat & Tool</h1>
           <p>
            Fast, powerful, and packed with exclusive features. — made for TruckersMP and solo.
