--- a/index.html
+++ b/index.html
@@ -491,7 +491,7 @@
         <span class="brand-mark"><i class="fa-solid fa-ghost"></i></span>
         <span class="brand-text">
           <strong>Ghosty</strong>
-          <span>External Cheat</span>
+          <span>Ghosty | Official</span>
         </span>
       </a>
 
