--- a/index.html
+++ b/index.html
@@ -294,6 +294,45 @@
       padding: 18px 0 44px;
     }
 
+    .showcase-wrap {
+      border: 1px solid var(--line);
+      border-radius: 14px;
+      background: linear-gradient(180deg, rgba(24,11,38,.85), rgba(11,5,18,.95));
+      padding: 12px;
+      box-shadow: var(--shadow);
+    }
+
+    .showcase-title {
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+      gap: 10px;
+      padding: 2px 4px 10px;
+    }
+
+    .showcase-title h3 {
+      margin: 0;
+      font-family: "Orbitron", sans-serif;
+      text-transform: uppercase;
+      letter-spacing: .04em;
+      font-size: 1rem;
+    }
+
+    .showcase-title span {
+      color: var(--muted);
+      font-size: .82rem;
+    }
+
+    .showcase-media {
+      width: 100%;
+      aspect-ratio: 16 / 9;
+      border-radius: 12px;
+      border: 1px solid rgba(206,147,255,.45);
+      background: rgba(7,2,14,.7);
+      object-fit: cover;
+      display: block;
+    }
+
     .section-head {
       margin-bottom: 12px;
       display: flex;
@@ -541,6 +580,19 @@
     </section>
 
     <section class="block">
+      <div class="container" style="padding-bottom: 6px;">
+        <div class="showcase-wrap">
+          <div class="showcase-title">
+            <h3><i class="fa-solid fa-circle-play"></i> Live Showcase</h3>
+            <span>Quick look at Ghosty in action</span>
+          </div>
+          <video class="showcase-media" autoplay muted loop playsinline controls>
+            <source src="showcase.mp4" type="video/mp4">
+            <source src="showcase.gif" type="image/gif">
+          </video>
+        </div>
+      </div>
+
       <div class="container">
         <div class="section-head">
           <h2>Key Features</h2>
