--- a/index.html
+++ b/index.html
@@ -294,7 +294,7 @@
       padding: 18px 0 44px;
     }
 
-    .showcase-wrap {
+ .showcase-wrap {
       border: 1px solid var(--line);
       border-radius: 14px;
       background: linear-gradient(180deg, rgba(24,11,38,.85), rgba(11,5,18,.95));
@@ -332,6 +332,7 @@
       object-fit: cover;
       display: block;
     }
+
 
     .section-head {
       margin-bottom: 12px;
@@ -580,16 +581,12 @@
     </section>
 
     <section class="block">
-      <div class="container" style="padding-bottom: 6px;">
+ <div class="container" style="padding-bottom: 6px;">
         <div class="showcase-wrap">
           <div class="showcase-title">
-            <h3><i class="fa-solid fa-circle-play"></i> Live Showcase</h3>
-            <span>Quick look at Ghosty in action</span>
+            <h3><i class="fa-solid fa-circle-play"></i> Showcase</h3>
           </div>
-          <video class="showcase-media" autoplay muted loop playsinline controls>
-            <source src="showcase.mp4" type="video/mp4">
-            <source src="showcase.gif" type="image/gif">
-          </video>
+          <img class="showcase-media" src="showcase.gif" alt="Ghosty feature showcase animation">
         </div>
       </div>
 
