--- a/index.html
+++ b/index.html
@@ -586,7 +586,7 @@
           <div class="showcase-title">
             <h3><i class="fa-solid fa-circle-play"></i> Showcase</h3>
           </div>
-          <img class="showcase-media" src="showcase.gif" alt="Ghosty feature showcase animation">
+          <img class="showcase-media" src="https://media3.giphy.com/media/v1.Y2lkPTZjMDliOTUyZzQyaTJ1ZnNzbWtrc2JwcnhoY2prNno3bDVkcjI1cGN1ZXB6MzUzdiZlcD12MV9naWZzX3NlYXJjaCZjdD1n/SVH9y2LQUVVCRcqD7o/giphy.gif" alt="Ghosty feature showcase animation">
         </div>
       </div>
 
