--- a/index.html
+++ b/index.html
@@ -294,7 +294,7 @@
       padding: 18px 0 44px;
     }
 
- .showcase-wrap {
+  .showcase-wrap {
       border: 1px solid var(--line);
       border-radius: 14px;
       background: linear-gradient(180deg, rgba(24,11,38,.85), rgba(11,5,18,.95));
@@ -581,14 +581,18 @@
     </section>
 
     <section class="block">
- <div class="container" style="padding-bottom: 6px;">
+       <div class="container" style="padding-bottom: 6px;">
         <div class="showcase-wrap">
           <div class="showcase-title">
             <h3><i class="fa-solid fa-circle-play"></i> Showcase</h3>
+            <span>Quick look at Ghosty in action</span>
           </div>
-          <img class="showcase-media" src="https://media3.giphy.com/media/v1.Y2lkPTZjMDliOTUyZzQyaTJ1ZnNzbWtrc2JwcnhoY2prNno3bDVkcjI1cGN1ZXB6MzUzdiZlcD12MV9naWZzX3NlYXJjaCZjdD1n/SVH9y2LQUVVCRcqD7o/giphy.gif" alt="Ghosty feature showcase animation">
+          <video class="showcase-media" autoplay muted loop playsinline preload="metadata" aria-label="Ghosty feature showcase video">
+            <source src="video.mp4" type="video/mp4">
+          </video>
         </div>
       </div>
+
 
       <div class="container">
         <div class="section-head">
