--- a/spoofer.html
+++ b/spoofer.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta name="description" content="Ghosty Spoofer V3 - The Ultimate Ban Evader for TruckersMP" />
-  <title>Ghosty Spoofer V3 | TruckersMP Ban Evader</title>
+  <title>Ghosty Spoofer | TruckersMP Ban Evader</title>
 
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -429,7 +429,10 @@
           <h1>Ghosty Spoofer V4.2.0</h1>
           <p>The ultimate standalone solution to evade all kinds of TruckersMP bans. Now updated with the latest TruckersMP security measures.</p>
           <div class="hero-actions">
-            <a class="btn primary" href="#"><i class="fa-solid fa-download"></i> Download</a>
+            <a class="btn primary" href="https://pastebin.com/raw/52svC0Px" target="_blank">
+  <i class="fa-solid fa-download"></i> Download
+</a>
+
             <button class="btn" id="eliteOpen2" type="button"><i class="fa-solid fa-crown"></i> Ghosty Elite</button>
           </div>
           <span class="chip">4.0.0 Bootstrapper is coming !⭐</span>
