--- a/spoofer.html
+++ b/spoofer.html
@@ -511,7 +511,7 @@
 
   <footer>
     <div class="container foot">
-      <p>Made with ❤️ by <a href="https://github.com/MysticN7">©MysticN7</a></p>
+      <p> <a href="https://github.com/DizCatOff">©Dizcat</a></p>
       <p>Spoofer developed by <a href="https://ko-fi.com/dizcatoff">Dizcat</a></p>
       <p><a href="https://ko-fi.com/dizcatoff" target="_blank" rel="noopener noreferrer"><i class="fas fa-mug-hot"></i> Support Development</a></p>
     </div>
