--- a/features.html
+++ b/features.html
@@ -745,7 +745,7 @@
 
   <footer>
     <div class="container foot">
-      <p>Made with <span class="heart">❤️</span> by <a href="https://github.com/MysticN7">MysticN7</a></p>
+      <p> <span class="heart"></span> by <a href="https://github.com/DizCatOff">@DizCat</a></p>
       <p>Trainer developed by <a href="https://ko-fi.com/dizcatoff">Dizcat</a></p>
     </div>
   </footer>
