--- a/index.html
+++ b/index.html
@@ -550,7 +550,7 @@
       <div class="container hero-grid">
         <article class="panel hero-main">
           <div class="mini-tag"><i class="fa-solid fa-wave-square"></i> Official website</div>
-          <h1>Ghosty, The #1 Cheat & Tool</h1>
+          <h1>Ghosty, The #1 Cheat & Tool For ETS2</h1>
           <p>
            Fast, powerful, and packed with exclusive features. — made for TruckersMP and solo.
               Minimal stress, maximum control. Keep it purple. Keep it ghost.
@@ -673,7 +673,9 @@
         <a class="btn danger" href="https://discord.gg/j6p4yvsfN3" target="_blank" rel="noopener noreferrer">
           <i class="fa-brands fa-discord"></i> Get Elite via our Discord
         </a>
-        <button class="btn" type="button" id="eliteClose2">Close</button>
+        <button class="btn" type="button" id="eliteClose2" style="color: white;">
+  Close
+</button>
       </div>
     </div>
   </div>
