--- a/spoofer.html
+++ b/spoofer.html
@@ -530,7 +530,9 @@
         <a class="btn" href="https://discord.gg/j6p4yvsfN3" target="_blank" rel="noopener noreferrer">
           <i class="fa-brands fa-discord"></i> Get Elite via our Discord
         </a>
-        <button class="btn" type="button" id="eliteClose2">Close</button>
+        <button class="btn" type="button" id="eliteClose2" style="color: white;">
+  Close
+</button>
       </div>
     </div>
   </div>
