--- a/features.html
+++ b/features.html
@@ -745,8 +745,12 @@
 
   <footer>
     <div class="container foot">
-      <p> <span class="heart"></span> by <a href="https://github.com/DizCatOff">@DizCat</a></p>
-      <p>Trainer developed by <a href="https://ko-fi.com/dizcatoff">Dizcat</a></p>
+      <span>©Dizcat • Programs developed by Dizcat.</span>
+      <span>
+        <a href="https://ko-fi.com/dizcatoff" target="_blank" rel="noopener noreferrer">Buy me a Coffee ❤️</a>
+        ·
+        <a href="https://github.com/DizCatOff" target="_blank" rel="noopener noreferrer">GitHub</a>
+      </span>
     </div>
   </footer>
 </body>
