--- a/spoofer.html
+++ b/spoofer.html
@@ -509,11 +509,14 @@
     </div>
   </main>
 
-  <footer>
+<footer>
     <div class="container foot">
-      <p> <a href="https://github.com/DizCatOff">©Dizcat</a></p>
-      <p>Spoofer developed by <a href="https://ko-fi.com/dizcatoff">Dizcat</a></p>
-      <p><a href="https://ko-fi.com/dizcatoff" target="_blank" rel="noopener noreferrer"><i class="fas fa-mug-hot"></i> Support Development</a></p>
+      <span>©Dizcat • Programs developed by Dizcat.</span>
+      <span>
+        <a href="https://ko-fi.com/dizcatoff" target="_blank" rel="noopener noreferrer">Buy me a Coffee ❤️</a>
+        ·
+        <a href="https://github.com/DizCatOff" target="_blank" rel="noopener noreferrer">GitHub</a>
+      </span>
     </div>
   </footer>
 
