--- a/index.html
+++ b/index.html
@@ -612,7 +612,7 @@
             <p>Live member list and online status directly on the homepage.</p>
             <iframe
               class="discord-widget-frame"
-              src="https://discord.com/widget?id=YOUR_SERVER_ID&theme=dark"
+              src="https://discord.com/widget?id=1395744314960773293&theme=dark"
               allowtransparency="true"
               frameborder="0"
               sandbox="allow-popups allow-popups-to-escape-sandbox allow-same-origin allow-scripts"
