--- a/index.html
+++ b/index.html
@@ -618,10 +618,19 @@
               sandbox="allow-popups allow-popups-to-escape-sandbox allow-same-origin allow-scripts"
               title="Ghosty Discord server widget">
             </iframe>
+            <div class="discord-widget-help">
+              <b>If the widget shows empty, do this in Discord:</b>
+              <ul>
+                <li>Server Settings → <strong>Widget</strong> → enable server widget.</li>
+                <li>Select an invite channel in Widget settings.</li>
+                <li>Keep this direct join link available: <a href="https://discord.gg/j6p4yvsfN3" target="_blank" rel="noopener noreferrer">discord.gg/j6p4yvsfN3</a>.</li>
+              </ul>
+            </div>
           </div>
         </aside>
       </div>
     </section>
+
 
     <section class="block">
        <div class="container" style="padding-bottom: 6px;">
