--- a/index.html
+++ b/index.html
@@ -116,13 +116,14 @@
       background: rgba(84,43,130,.18);
     }
 
-    .discord-widget-frame {
-      width: 100%;
-      height: 500px;
-      border: 0;
-      border-radius: 10px;
-      background: rgba(7,2,14,.9);
-    }
+.discord-widget-frame {
+  width: 100%;
+  height: 320px; 
+  border: 0;
+  border-radius: 10px;
+  background: rgba(7,2,14,.9);
+}
+
 
     .discord-widget-help {
       margin-top: 10px;
@@ -654,15 +655,16 @@
             <div class="discord-widget-meta" id="discordMeta">
             </div>
             <iframe
-              class="discord-widget-frame"
-              src="https://discord.com/widget?id=1395744314960773293&theme=dark"
-              width="350"
-              height="500"
-              allowtransparency="true"
-              frameborder="0"
-              sandbox="allow-popups allow-popups-to-escape-sandbox allow-same-origin allow-scripts"
-              title="Ghosty Discord server widget">
-            </iframe>
+  class="discord-widget-frame"
+  src="https://discord.com/widget?id=1395744314960773293&theme=dark"
+  width="100%"
+  height="320"
+  allowtransparency="true"
+  frameborder="0"
+  sandbox="allow-popups allow-popups-to-escape-sandbox allow-same-origin allow-scripts"
+  title="Ghosty Discord server widget">
+</iframe>
+
            
           </div>
         </aside>
