--- a/index.html
+++ b/index.html
@@ -118,11 +118,12 @@
 
 .discord-widget-frame {
   width: 100%;
-  height: 320px; 
+  height: 210px; /* smaller than before */
   border: 0;
   border-radius: 10px;
   background: rgba(7,2,14,.9);
 }
+
 
 
     .discord-widget-help {
@@ -654,11 +655,11 @@
             <h4><i class="fa-brands fa-discord"></i> Join Ghosty Discord</h4>
             <div class="discord-widget-meta" id="discordMeta">
             </div>
-            <iframe
+          <iframe
   class="discord-widget-frame"
   src="https://discord.com/widget?id=1395744314960773293&theme=dark"
   width="100%"
-  height="320"
+  height="210"
   allowtransparency="true"
   frameborder="0"
   sandbox="allow-popups allow-popups-to-escape-sandbox allow-same-origin allow-scripts"
